--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 	"dependencies": {
 		"chalk": "2.1.x",
 		"figures": "2.0.x",
-		"glob": "7.1.x"
+		"glob": "7.1.x",
+		"ora": "1.3.x"
 	},
 	"peerDependencies": {
 		"typescript": ">= 2.4.0"
