--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,25 @@
 {
 	"compilerOptions": {
 		"baseUrl": "",
-		"declaration": false,
+		"declaration": true,
 		"lib": [
 			"es5",
-			"es6",
-			"dom",
-			"es2015.core",
-			"es2015.collection",
-			"es2015.generator",
-			"es2015.iterable",
-			"es2015.promise",
-			"es2015.proxy",
-			"es2015.reflect",
-			"es2015.symbol",
-			"es2015.symbol.wellknown",
-			"esnext.asynciterable"
+			"es2015",
+			"es2016",
+			"es2017",
+			"esnext"
 		],
 		"module": "commonjs",
 		"moduleResolution": "node",
-		"outDir": "./build/tsc",
-		"target": "es2015",
+		"outDir": "./dist",
+		"preserveConstEnums": true,
+		"removeComments": true,
+		"target": "es2016",
 		"typeRoots": [
 			"node_modules/@types"
 		]
-	}
+	},
+	"files": [
+		"index.ts"
+	]
 }
