--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
 	},
 	"scripts": {
 		"compile": "tsc -p tsconfig.json",
-		"start": "node bin/no-skipped-tests.js example/*.spec.ts",
-		"test": "jasmine-ts test/test.spec.ts"
+		"start": "node bin/no-skipped-tests.js",
+		"test": "nyc --reporter text --reporter html --extension .ts --exclude spec/**/* --cache false jasmine-ts"
 	},
 	"dependencies": {
 		"chalk": "2.1.x",
@@ -33,6 +33,8 @@
 		"@types/jasmine": "2.5.x",
 		"@types/node": "8.0.x",
 		"jasmine-ts": "0.2.x",
+		"jasmine-spec-reporter": "4.2.x",
+		"nyc": "11.1.x",
 		"typescript": "2.4.x"
 	}
 }
