--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"url": "https://github.com/dominique-mueller/no-skipped-tests/issues"
 	},
 	"scripts": {
-		"compile": "tsc -p tsconfig.json",
+		"build": "tsc -p tsconfig.json",
 		"start": "node bin/no-skipped-tests.js",
 		"test": "nyc --reporter text --reporter html --extension .ts --exclude spec/**/* --cache false jasmine-ts"
 	},
