--- a/package.json
+++ b/package.json
@@ -22,18 +22,15 @@
 		"test": "jest --config jest.config.json --runInBand --no-cache"
 	},
 	"dependencies": {
-		"chalk": "2.1.x",
+		"chalk": "2.3.x",
 		"glob": "7.1.x",
-		"ora": "1.3.x"
-	},
-	"peerDependencies": {
-		"typescript": ">= 2.4.0"
+		"ora": "1.3.x",
+		"typescript": "2.6.x"
 	},
 	"devDependencies": {
-		"@types/jest": "20.0.x",
+		"@types/jest": "21.1.x",
 		"@types/node": "8.0.x",
-		"jest": "20.0.x",
-		"ts-jest": "20.0.x",
-		"typescript": "2.4.x"
+		"jest": "21.2.x",
+		"ts-jest": "21.2.x"
 	}
 }
