--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
 	"bugs": {
 		"url": "https://github.com/dominique-mueller/no-skipped-tests/issues"
 	},
+	"main": "index.js",
+	"types": "index.d.ts",
+	"bin": {
+		"automatic-release": "bin/no-skipped-tests.js"
+	},
 	"scripts": {
-		"build": "tsc -p tsconfig.json",
-		"start": "node bin/no-skipped-tests.js",
+		"build": "tsc -p tsconfig.json && copyfiles \"bin/**\" dist",
+		"clean": "rimraf -r dist/*",
+		"release": "automatic-release && copyfiles \"docs/**\" package.json CHANGELOG.md LICENSE README.md dist",
+		"test:coverage": "codecov -f coverage/coverage-final.json",
 		"test": "jest --config jest.config.json --runInBand --no-cache"
 	},
 	"dependencies": {
@@ -30,7 +37,11 @@
 	"devDependencies": {
 		"@types/jest": "21.1.x",
 		"@types/node": "8.0.x",
+		"automatic-release": "1.1.x",
+		"codecov": "3.0.x",
+		"copyfiles": "1.2.x",
 		"jest": "21.2.x",
+		"rimraf": "2.6.x",
 		"ts-jest": "21.2.x"
 	}
 }
