--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ branches:
 
 # Build stages
 stages:
+  - name: TEMP
   - name: build
   - name: test
   - name: release
@@ -25,6 +26,13 @@ stages:
 # Build jobs
 jobs:
   include:
+
+    - stage: TEMP
+      install:
+        - npm install
+        - npm install -g typescript ts-node
+      script:
+        - npm run temp
 
     - stage: build
       install:
