--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "no-skipped-tests",
-	"description": "WORK IN PROGRESS",
-	"version": "0.0.0",
+	"description": "Analyzes your project for focused or ignored tests.",
+	"version": "1.0.0",
 	"author": {
 		"name": "Dominique Müller",
 		"email": "dominique.m.mueller@gmail.com",
@@ -16,6 +16,19 @@
 	"bugs": {
 		"url": "https://github.com/dominique-mueller/no-skipped-tests/issues"
 	},
+	"keywords": [
+		"test",
+		"skip",
+		"fdescribe",
+		"xdescribe",
+		"fit",
+		"xit",
+		"jasmine",
+		"karma",
+		"angular",
+		"typescript",
+		"javascript"
+	],
 	"main": "index.js",
 	"types": "index.d.ts",
 	"bin": {
