--- a/package.json
+++ b/package.json
@@ -1,60 +1,49 @@
 {
-	"name": "no-skipped-tests",
-	"description": "Analyzes your project for focused or ignored tests.",
-	"version": "1.0.0",
-	"author": {
-		"name": "Dominique Müller",
-		"email": "dominique.m.mueller@gmail.com",
-		"url": "https://www.devdom.io/"
-	},
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/dominique-mueller/no-skipped-tests.git"
-	},
-	"homepage": "https://github.com/dominique-mueller/no-skipped-tests",
-	"bugs": {
-		"url": "https://github.com/dominique-mueller/no-skipped-tests/issues"
-	},
-	"keywords": [
-		"test",
-		"skip",
-		"fdescribe",
-		"xdescribe",
-		"fit",
-		"xit",
-		"jasmine",
-		"karma",
-		"angular",
-		"typescript",
-		"javascript"
-	],
-	"main": "index.js",
-	"types": "index.d.ts",
-	"bin": {
-		"no-skipped-tests": "bin/no-skipped-tests.js"
-	},
-	"scripts": {
-		"build": "tsc -p tsconfig.json && copyfiles \"bin/**\" dist",
-		"clean": "rimraf -r dist/*",
-		"release": "automatic-release && copyfiles \"docs/**\" package.json CHANGELOG.md LICENSE README.md dist",
-		"test:coverage": "codecov -f coverage/coverage-final.json",
-		"test": "jest --config jest.config.json --runInBand --no-cache"
-	},
-	"dependencies": {
-		"chalk": "2.4.x",
-		"glob": "7.1.x",
-		"ora": "3.0.x",
-		"typescript": "3.0.x"
-	},
-	"devDependencies": {
-		"@types/jest": "23.1.x",
-		"@types/node": "8.10.x",
-		"automatic-release": "1.1.x",
-		"codecov": "3.0.x",
-		"copyfiles": "2.1.x",
-		"jest": "23.5.x",
-		"rimraf": "2.6.x",
-		"ts-jest": "22.4.x"
-	}
+  "name": "no-skipped-tests",
+  "description": "Analyzes your project for focused or ignored tests",
+  "version": "1.0.0",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dominique-mueller/no-skipped-tests.git"
+  },
+  "keywords": [
+    "test",
+    "skip",
+    "fdescribe",
+    "xdescribe",
+    "fit",
+    "xit",
+    "jasmine",
+    "karma",
+    "angular",
+    "typescript",
+    "javascript"
+  ],
+  "main": "index.js",
+  "types": "index.d.ts",
+  "bin": {
+    "no-skipped-tests": "bin/no-skipped-tests.js"
+  },
+  "scripts": {
+    "build": "rimraf -r dist && tsc -p tsconfig.json && copyfiles \"bin/**\" \"docs/**\" package.json CHANGELOG.md LICENSE README.MD dist",
+    "test:coverage": "codecov -f coverage/coverage-final.json",
+    "test": "jest --config jest.config.json --runInBand --no-cache"
+  },
+  "dependencies": {
+    "chalk": "2.4.x",
+    "glob": "7.1.x",
+    "ora": "3.0.x",
+    "typescript": "3.0.x"
+  },
+  "devDependencies": {
+    "@types/jest": "23.1.x",
+    "@types/node": "8.10.x",
+    "automatic-release": "1.1.x",
+    "codecov": "3.0.x",
+    "copyfiles": "2.1.x",
+    "jest": "23.5.x",
+    "rimraf": "2.6.x",
+    "ts-jest": "22.4.x"
+  }
 }
