Update dependencies, add linter and formatter, fix linting and formatting issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,13 @@
 {
-	"compilerOptions": {
-		"declaration": true,
-		"module": "commonjs",
-		"moduleResolution": "node",
-		"outDir": "./dist",
-		"preserveConstEnums": true,
-		"removeComments": true,
-		"target": "es2017",
-		"sourceMap": true
-	},
-	"files": [
-		"index.ts"
-	]
+  "compilerOptions": {
+    "declaration": true,
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "preserveConstEnums": true,
+    "removeComments": true,
+    "target": "es2017",
+    "sourceMap": true
+  },
+  "files": ["index.ts"]
 }
