--- a/package.json
+++ b/package.json
@@ -27,23 +27,33 @@
   },
   "scripts": {
     "build": "rimraf -r dist && tsc -p tsconfig.json && copyfiles \"bin/**\" \"docs/**\" package.json CHANGELOG.md LICENSE README.MD dist",
-    "test:coverage": "codecov -f coverage/coverage-final.json",
+    "lint": "eslint src/**/*.ts index.ts --max-warnings 0",
+    "lint:fix": "eslint src/**/*.ts index.ts --max-warnings 0 --fix",
+    "test:upload-coverage": "codecov -f coverage/coverage-final.json",
     "test": "jest --config jest.config.json --runInBand --no-cache"
   },
   "dependencies": {
-    "chalk": "2.4.x",
+    "chalk": "4.1.x",
     "glob": "7.1.x",
-    "ora": "3.0.x",
-    "typescript": "3.0.x"
+    "ora": "5.3.x",
+    "typescript": "4.1.x"
   },
   "devDependencies": {
-    "@types/jest": "23.1.x",
-    "@types/node": "8.10.x",
-    "automatic-release": "1.1.x",
-    "codecov": "3.0.x",
-    "copyfiles": "2.1.x",
-    "jest": "23.5.x",
-    "rimraf": "2.6.x",
-    "ts-jest": "22.4.x"
+    "@types/glob": "7.1.x",
+    "@types/jest": "26.0.x",
+    "@types/node": "14.14.x",
+    "@typescript-eslint/eslint-plugin": "4.14.x",
+    "@typescript-eslint/parser": "4.14.x",
+    "codecov": "3.8.x",
+    "copyfiles": "2.4.x",
+    "eslint-config-prettier": "7.2.x",
+    "eslint-plugin-import": "2.22.x",
+    "eslint-plugin-prettier": "3.3.x",
+    "eslint-plugin-simple-import-sort": "7.0.x",
+    "eslint": "7.21.x",
+    "jest": "26.6.x",
+    "prettier": "2.2.x",
+    "rimraf": "3.0.x",
+    "ts-jest": "26.5.x"
   }
 }
