Fix unit tests broken due to code formatting

--- a/jest.config.json
+++ b/jest.config.json
@@ -5,7 +5,7 @@
   "moduleFileExtensions": ["js", "ts"],
   "rootDir": ".",
   "transform": {
-    "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    "^.+\\.tsx?$": "ts-jest"
   },
   "testRegex": "test.spec.ts",
   "verbose": true
